objects/Case.object
<CustomObject>
    <fields>
        <fullName>Active_Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Status_Image_URL__c</fullName>
        <formula>&quot;/&quot; + MID(Case_Status_image__c, 6, FIND(&quot;file=&quot;,Case_Status_image__c) + 14)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status_image__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;New&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=01528000001vbk2&quot;, &quot;New&quot;, 30, 30), 
IF( ISPICKVAL( Status , &quot;Unassigned&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oxh&quot;, &quot;Unassigned&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Assigned&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=00D28000001bFbd&quot;, &quot;Assigned&quot;, 70, 70), 
IF( OR(ISPICKVAL( Status , &quot;Requires Approval&quot;), ISPICKVAL( Status , &quot;Awaiting Approval&quot;)) , IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oxr&quot;, &quot;Needs Approval&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Approved&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oxw&quot;, &quot;Approved&quot;, 40, 60), 
IF( ISPICKVAL( Status , &quot;In Progress&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oy6&quot;, &quot;In Progress&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Escalated&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oyB&quot;, &quot;Escalated&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;On Hold&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oyG&quot;, &quot;On Hold&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Planning&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oyL&quot;, &quot;Planning&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Closed&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oyQ&quot;, &quot;Closed&quot;, 40, 40), 
IF( ISPICKVAL( Status , &quot;Complete&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oyV&quot;, &quot;Complete&quot;, 40, 40), 
IMAGE(&quot;servlet/servlet.FileDownload?file=015p00000005oya&quot;, &quot;Unknown&quot;, 40, 40))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Pathak</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Complaint_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Complaint Cases</label>
        <queue>Complaint_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Facebook_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Facebook</value>
        </filters>
        <label>Facebook Queue</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>